# bookhaven

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  crud.py  database.py  models.py  seed.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: app.css  app.html
frontend/src/lib/api/: books.ts
frontend/src/lib/components/: BookCard.svelte  BookForm.svelte
frontend/src/lib/forms/: book.ts
frontend/src/lib/types/: book.ts
frontend/src/lib/utils/: format.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/books/[id]/: +page.server.ts  +page.svelte
frontend/src/routes/books/[id]/edit/: +page.server.ts  +page.svelte
frontend/src/routes/books/new/: +page.server.ts  +page.svelte
